--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -5,12 +5,8 @@
       \/
       = link_to @scraper.name, @scraper
   .col-md-1
-    - if current_user.indirectly_watching?(@scraper)
-      = button_to "Unwatch", "#", class: "btn btn-default", disabled: "disabled"
-    - elsif current_user.watching?(@scraper)
-      = button_to "Unwatch", scraper_watch_path(@scraper), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Stop receiving alerts for this scraper"}
-    - else
-      = button_to "Watch", scraper_watch_path(@scraper), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Receive alerts when this scraper errors"}
+    - if signed_in?
+      = render partial: "watch_button", locals: {scraper: @scraper}
 
 %h4
   = @scraper.description
