--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -6,7 +6,7 @@
       = link_to @scraper.name, @scraper
   .col-md-1
     - if signed_in?
-      = render partial: "watch_button", locals: {scraper: @scraper}
+      .button_title_adjust= render partial: "watch_button", locals: {scraper: @scraper}
 
 %h4
   = @scraper.description
