--- a/app/views/users/watching.html.haml
+++ b/app/views/users/watching.html.haml
@@ -28,7 +28,7 @@
       %h2= link_to user.nickname, user
     .col-md-1
       - if @user == current_user
-        = render partial: "owners/watch_button", locals: {owner: user}
+        .button_title_adjust= render partial: "owners/watch_button", locals: {owner: user}
   .row
     .col-md-11
       .list-group= render user.scrapers
@@ -39,7 +39,7 @@
       %h2= link_to organization.nickname, organization
     .col-md-1
       - if @user == current_user
-        = render partial: "owners/watch_button", locals: {owner: organization}
+        .button_title_adjust= render partial: "owners/watch_button", locals: {owner: organization}
   .row
     .col-md-11
       .list-group= render organization.scrapers
