--- a/app/views/scrapers/_scraper.html.haml
+++ b/app/views/scrapers/_scraper.html.haml
@@ -1,8 +1,7 @@
 - cache ["v1", scraper] do
   = link_to scraper, class: "list-group-item" do
     .icon-box.pull-right
-      - if scraper.auto_run
-        %i.icon-time
+      = render partial: "scrapers/auto_clock", locals: {scraper: scraper}
     .icon-box.pull-right
       - if scraper.last_run && (scraper.last_run.queued? || scraper.last_run.running?)
         .pulse
