Add thing about email alerts on front page and README

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -26,6 +26,8 @@
         %li
           Trivial to move scraper code and data from
           = link_to "ScraperWiki Classic", "https://classic.scraperwiki.com/"
+        %li
+          Email alerts for broken scrapers
 
 %ul.list-inline
   %li
