Hardcoded desired email text

--- a/app/views/alert_mailer/alert_email.text.erb
+++ b/app/views/alert_mailer/alert_email.text.erb
@@ -1,1 +1,13 @@
-Scrapers have failed
+planningalerts-scrapers/campbelltown errored about 2 hours ago
+Fix it: https://morph.io/planningalerts-scrapers/campbelltown
+PHP Fatal error: Call to a member function find() on a non-object in /repo/scraper.php on line 16
+
+planningalerts-scrapers/spear errored about 22 hours ago
+Fix it: https://morph.io/planningalerts-scrapers/spear
+/repo/scraper.rb:98:in `<main>' : undefined method `field_with' for nil:NilClass ( NoMethodError )
+
+32 other scrapers you are watching ran without error
+
+-----
+Change what you're watching - https://morph.io/users/mlandauer/watching
+Morph.io - https://morph.io
