Improve formatting of log lines

--- a/app/views/runs/_console.html.haml
+++ b/app/views/runs/_console.html.haml
@@ -3,4 +3,4 @@
   %p Hint: Keep this to a minimum during normal use (so that things remain readable)
   %pre
     - run.log_lines.order(:number).each do |line|
-      %span{:class => line.stream}= line.text
+      = content_tag(:span, h(line.text).gsub("\n", "&#x000A;").html_safe, class: line.stream)
