Put supported languages on the front page

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -17,6 +17,9 @@
           All code and collaboration through
           = link_to "GitHub", "https://github.com/"
         %li
+          Write your scrapers in #{link_to "Ruby", "https://www.ruby-lang.org"},
+          #{link_to "Python", "http://www.python.org"} or #{link_to "PHP", "http://www.php.net"}
+        %li
           Simple API to grab data
         %li
           Schedule scrapers or run manually
