Make footer a little better

--- a/app/views/alert_mailer/alert_email.html.haml
+++ b/app/views/alert_mailer/alert_email.html.haml
@@ -8,6 +8,5 @@
 
 %p #{pluralize(@successful_count, "other scraper")} you are watching finished successfully
 
-%p
-  Change what you're watching - #{link_to user_watching_url(@user), user_watching_url(@user)}
-  Morph.io - #{link_to root_url, root_url}
+%p Change what you're watching - #{link_to user_watching_url(@user), user_watching_url(@user)}
+%p= link_to "Morph.io", root_url
