--- a/app/views/alert_mailer/alert_email.text.erb
+++ b/app/views/alert_mailer/alert_email.text.erb
@@ -12,5 +12,5 @@ Fix it: <%= scraper_url(run.scraper) %>
 <%= pluralize(@successful_count, "other scraper") %> you are watching finished successfully
 
 -----
-Change what you're watching - <%= user_watching_url(@user) %>
+Annoyed by these emails? Then change what you're watching - <%= user_watching_url(@user) %>
 Morph.io - <%= root_url %>
