--- a/app/views/alert_mailer/alert_email.text.erb
+++ b/app/views/alert_mailer/alert_email.text.erb
@@ -1,3 +1,6 @@
+Morph is letting you know that
+
+
 <% @broken_runs.each do |run| %>
 <%= run.full_name %> errored <%= time_ago_in_words(run.finished_at) %> ago
 Fix it: <%= scraper_url(run.scraper) %>
