--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -1,9 +1,10 @@
 %h1 Add scraper from your Github repository
 
-%p
-  Scrapers can be written in Ruby or PHP. For Ruby They need to have a file in the root
-  directory called "scraper.rb" and for PHP "scraper.php". They should create an sqlite database in the current working
-  directory called "#{Database.sqlite_db_filename}". The main data should be written into a table called "#{Database.sqlite_table_name}".
+:markdown
+  Scrapers can be written in Ruby, PHP or Python. For Ruby They need to have a file in the root
+  directory called `scraper.rb`, for PHP `scraper.php` and for Python `scraper.py`.
+  They should create an sqlite database in the current working directory called `#{Database.sqlite_db_filename}`.
+  The main data should be written into a table called `#{Database.sqlite_table_name}`.
   The code needs to live in the master branch of the repository.
 
 -# TODO Don't show repos that we've already added
