auto link urls in data table. Fixes #69

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -16,4 +16,4 @@
           - row.each_value do |v|
             %td
               %div.has-popover{data: {toggle: "popover", placement: "bottom", trigger: "hover", content: v, container: "body"}}
-                = v
+                = auto_link(v)
