--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -3,8 +3,8 @@
 :markdown
   Scrapers can be written in Ruby, PHP or Python. For Ruby They need to have a file in the root
   directory called `scraper.rb`, for PHP `scraper.php` and for Python `scraper.py`.
-  They should create an sqlite database in the current working directory called `#{Database.sqlite_db_filename}`.
-  The main data should be written into a table called `#{Database.sqlite_table_name}`.
+  They should create an sqlite database in the current working directory called `#{Morph::Database.sqlite_db_filename}`.
+  The main data should be written into a table called `#{Morph::Database.sqlite_table_name}`.
   The code needs to live in the master branch of the repository.
 
 -# TODO Don't show repos that we've already added
