--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -11,7 +11,7 @@
 
 = semantic_form_for @scraper do |f|
   = f.inputs do
-    = f.input :name, as: :radio, collection: @repos.map{|r| [radio_description(r), r.name]}, label: "GitHub Repository", include_blank: false
+    = f.input :full_name, as: :radio, collection: @repos.map{|r| [radio_description(r), r.full_name]}, label: "GitHub Repository", include_blank: false
   = f.actions do
     = f.action :submit, label: "Add Scraper"
 
