Add proper titles to most pages. Fixes #171

--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -1,3 +1,4 @@
+- content_for :title, @owner.nickname
 .row
   .col-md-3
     = image_tag @owner.gravatar_url, class: "img-responsive img-thumbnail"
