--- a/app/views/static/api.html.haml
+++ b/app/views/static/api.html.haml
@@ -1,4 +1,5 @@
-%h1 API
+- content_for :title, "API"
+%h1= yield :title
 
 %p The API allows you to programatically retrieve data from any public scraper using an SQL query. It's all pretty easy.
 
