--- a/app/views/static/api.html.haml
+++ b/app/views/static/api.html.haml
@@ -8,16 +8,20 @@
 
 %h2 Parameters
 
-= semantic_form_for @scraper do |f|
+= semantic_form_for @scraper, html: {class: "form-horizontal"} do |f|
   = f.inputs do
-    = f.input :full_name, label: "[scraper]", hint: "The full name of the scraper as seen in the url (e.g. #{@scraper.full_name})"
+    .string.input.optional.stringish.form-group#scraper_full_name_input
+      %label.control-label.col-sm-1(for="scraper_full_name") [scraper]
+      .col-sm-11
+        %input.form-control#scraper_full_name(maxlength="255" name="scraper[full_name]" type="text" value="#{@scraper.full_name}")
+        %span.help-block The full name of the scraper as seen in the url (e.g. #{@scraper.full_name})
     .string.input.optional.stringish.form-group#query_input
-      %label.control-label(for="query")
-        [sql]
-      %input.form-control#query(maxlength="255" name="scraper[full_name]" type="text" value="#{@query}")
-      %span.help-block
-        The SQL query to perform on the SQLite database that is the output of the scraper (e.g. "#{@query}").
-        Ensure it is #{link_to "url encoded", "https://en.wikipedia.org/wiki/Percent-encoding"}.
+      %label.control-label.col-sm-1(for="query") [sql]
+      .col-sm-11
+        %input.form-control#query(maxlength="255" name="scraper[full_name]" type="text" value="#{@query}")
+        %span.help-block
+          The SQL query to perform on the SQLite database that is the output of the scraper (e.g. "#{@query}").
+          Ensure it is #{link_to "url encoded", "https://en.wikipedia.org/wiki/Percent-encoding"}.
 
 %h2 Full URL
 %p
