--- a/app/views/scraperwiki_forks/new.html.haml
+++ b/app/views/scraperwiki_forks/new.html.haml
@@ -8,8 +8,18 @@
 
 = semantic_form_for @scraper, url: scraperwiki_forks_path do |f|
   = f.inputs do
-    = f.input :scraperwiki_url, hint: "The full URL for the ScraperWiki Classic scraper that you want to fork to here", input_html: {placeholder: "https://classic.scraperwiki.com/scrapers/city_of_sydney_development_applications/"}
-    = f.input :owner, collection: ([current_user] + current_user.organizations).map{|o| [o.nickname, o.id]}, include_blank: false
-    = f.input :name, hint: "Name to give the scraper here and on GitHub", input_html: {placeholder: "city_of_sydney_development_applications"}
+    .row
+      .col-sm-8
+        = f.input :scraperwiki_url, hint: "The full URL for the ScraperWiki Classic scraper that you want to fork to here", input_html: {placeholder: "https://classic.scraperwiki.com/scrapers/city_of_sydney_development_applications/"}
+    .row
+      .col-sm-2
+        = f.input :owner, collection: ([current_user] + current_user.organizations).map{|o| [o.nickname, o.id]}, include_blank: false
+      .col-sm-6
+        .string.input.optional.stringish.form-group#scraper_name_input
+          %label.control-label(for="scraper_name") Name
+          .input-group
+            %span.input-group-addon /
+            %input.form-control#scraper_name(maxlength="255" name="scraper[name]" placeholder="city_of_sydney_development_applications" type="text")
+          %span.help-block Name to give the scraper here and on GitHub
   = f.actions do
     = f.action :submit, label: "Fork Scraperwiki scraper"
