Show progress of forking from scraperwiki. Fixes #173

--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -33,7 +33,10 @@
 - if @scraper.forking?
   %h2 Forking!
   .progress.progress-striped.active
-    .progress-bar(style="width: 100%")
+    .progress-bar(style="width: #{@scraper.forking_progress == 0 ? 5 : @scraper.forking_progress}%")
+      - if @scraper.forking_message
+        = @scraper.forking_message
+        &hellip;
   %span.muted
     (Refresh page for the latest)
 
