Add git clone url to scraper page. Fixes #156

--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -33,6 +33,8 @@
       Forked from
       = link_to "ScraperWiki", @scraper.scraperwiki_url, target: "_blank"
 
+  %p
+    git clone URL: #{@scraper.git_url_https}
   - if @scraper.github_url
     %p
       %i.icon-github-sign.icon-large
