Put the two dangerous buttons in their own panel

--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -1,8 +1,10 @@
 - if @scraper.can_write?(current_user)
-  %h3 Here be dragons!
-
-  %p
-    = button_to "Clear database", clear_scraper_path(@scraper), {class: "btn btn-danger", data: {confirm: "All your data will be gone!"}}
-  %p
-    = button_to "Delete scraper", @scraper, {method: :delete, class: "btn btn-danger", data: {confirm: "Delete #{@scraper.full_name}?"}}
-  %p These can't be undone
+  .panel.panel-danger
+    .panel-heading
+      %h3.panel-title Here be dragons!
+    .panel-body
+      %p
+        = button_to "Clear database", clear_scraper_path(@scraper), {class: "btn btn-danger", data: {confirm: "All your data will be gone!"}}
+      %p
+        = button_to "Delete scraper", @scraper, {method: :delete, class: "btn btn-danger", data: {confirm: "Delete #{@scraper.full_name}?"}}
+      %p These can't be undone
