--- a/app/views/scraperwiki_forks/new.html.haml
+++ b/app/views/scraperwiki_forks/new.html.haml
@@ -1,16 +1,24 @@
-%h1 Fork Scraperwiki scraper
+- if @scraper.scraperwiki_shortname
+  %h1 Fork Scraperwiki scraper #{@scraper.scraperwiki_shortname}
 
-%p This is where you can pick a Scraperwiki scraper, optionally choose a name for it on GitHub and fork away!
+  %p Choose a name for the scraper on GitHub
+- else
+  %h1 Fork Scraperwiki scraper
 
-%p
-  = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/", target: "_blank"
-  for a scraper on ScraperWiki Classic that you want to fork. Then paste the name of the scraper below.
+  %p This is where you can pick a Scraperwiki scraper, optionally choose a name for it on GitHub and fork away!
+
+  %p
+    = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/", target: "_blank"
+    for a scraper on ScraperWiki Classic that you want to fork. Then paste the name of the scraper below.
 
 = semantic_form_for @scraper, url: scraperwiki_forks_path do |f|
   = f.inputs do
     .row
       .col-sm-8
-        = f.input :scraperwiki_shortname, hint: "The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork", input_html: {placeholder: "city_of_sydney_development_applications"}, label: "Name of Scraperwiki scraper"
+        - if @scraper.scraperwiki_shortname
+          = f.hidden_field :scraperwiki_shortname
+        - else
+          = f.input :scraperwiki_shortname, hint: "The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork", input_html: {placeholder: "city_of_sydney_development_applications"}, label: "Name of Scraperwiki scraper"
     .row
       .col-sm-2
         = f.input :owner, collection: ([current_user] + current_user.organizations).map{|o| [o.nickname, o.id]}, include_blank: false
