Display errors again on scraperwiki fork page

--- a/app/views/scraperwiki_forks/new.html.haml
+++ b/app/views/scraperwiki_forks/new.html.haml
@@ -23,11 +23,14 @@
       .col-sm-2
         = f.input :owner, collection: ([current_user] + current_user.organizations).map{|o| [o.nickname, o.id]}, include_blank: false
       .col-sm-6
-        .string.input.optional.stringish.form-group#scraper_name_input
+        .string.input.optional.stringish.form-group#scraper_name_input{class: ("error has-error" unless @scraper.errors[:name].empty?)}
           %label.control-label(for="scraper_name") Name
           .input-group
             %span.input-group-addon /
-            %input.form-control#scraper_name(maxlength="255" name="scraper[name]" placeholder="city_of_sydney_development_applications" type="text")
+            %input.form-control#scraper_name{maxlength: "255", name:"scraper[name]", placeholder:"city_of_sydney_development_applications", type:"text", value:"#{@scraper.name}", class:("error" unless @scraper.errors[:name].empty?)}
           %span.help-block Name to give the scraper here and on GitHub
+          - @scraper.errors.full_messages_for(:name).each do |m|
+            %span.help-inline= m
+
   = f.actions do
     = f.action :submit, label: "Fork Scraperwiki scraper"
