--- a/app/views/scraperwiki_forks/new.html.haml
+++ b/app/views/scraperwiki_forks/new.html.haml
@@ -18,7 +18,12 @@
         - if @name_set
           = f.hidden_field :scraperwiki_shortname
         - else
-          = f.input :scraperwiki_shortname, hint: "The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork", input_html: {placeholder: "city_of_sydney_development_applications"}, label: "Name of Scraperwiki scraper"
+          .string.input.optional.stringish.form-group#scraper_scraperwiki_shortname_input{class: ("error has-error" unless @scraper.errors[:scraperwiki_shortname].empty?)}
+            %label.control-label(for="scraper_scraperwiki_shortname") Name of ScraperWiki scraper
+            %input.form-control#scraper_scraperwiki_shortname{maxlength: "255", name:"scraper[scraperwiki_shortname]", placeholder:"city_of_sydney_development_applications", type:"text", value:"#{@scraper.scraperwiki_shortname}", class:("error" unless @scraper.errors[:scraperwiki_shortname].empty?)}
+            - @scraper.errors.full_messages_for(:scraperwiki_shortname).each do |m|
+              .alert.alert-warning= m
+            %span.help-block The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork
     .row
       .col-sm-2
         = f.input :owner, collection: ([current_user] + current_user.organizations).map{|o| [o.nickname, o.id]}, include_blank: false
